PLAT-19249: Fix message alignment issue (#133)

--- a/plugins/agentdestop/agentdesktop.css
+++ b/plugins/agentdestop/agentdesktop.css
@@ -399,7 +399,7 @@
     display: initial;
     width: 137px;
     color: #333;
-    margin-left: 20px;
+    margin-left: 0;
     margin-top: 43x;
     font-weight: bold;
     font-size: 12px;
